force-app/main/default/objects/Business_Size__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <formula>Product__r.Name + &quot; is meant to be sold to &quot; + Text(Product_Business_Size__c)
+ &quot; accounts. Please verify your selection with the accounts team.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message</label>
    <type>Text</type>
</CustomField>