force-app/main/default/objects/Business_Size__c/fields/Product_Business_Size__c.field-meta.xml
<CustomField>
    <fullName>Product_Business_Size__c</fullName>
    <label>Product Business Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>